--- a/17_js_comparison/index.html
+++ b/17_js_comparison/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-   <p id="demo">dates</p>
+   <p id="demo">comparison</p>
    <script src="myScript.js"></script> 
 </body>
 </html>
